# sora-cpp-sdk

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGES.jetson-jetpack-5.md  CHANGES.jetson-jetpack-6.md  CHANGES.md  CLAUDE.md  CMakeLists.txt  DEPS  DEVELOPMENT.md  NOTICE  NOTICE.md  README.md  VERSION  base.py  build.py  buildbase.py  canary.py  json.patch  run.py
.github/workflows/: build.yml  ci.yml  claude.yml  e2e-test.yml  formatter.yml  release.yml
NvCodec/Utils/: NvCodecUtils.h
android/Sora/: build.gradle.kts  settings.gradle.kts
android/SoraAudioManager/: build.gradle.kts  settings.gradle.kts
cmake/: FindLibva.cmake  FindLyra.cmake  FindMsdk.cmake  FindWebRTC.cmake  android.toolchain.cmake
doc/: USE_MESSAGING_RECVONLY_SAMPLE.md  USE_MOMO_SAMPLE.md  USE_SDL_SAMPLE.md  USE_SUMOMO.md  build.md  development.md  faq.md  intel_media_sdk.md  known_issues.md  maintenance_policy.md  usage.md  vpl.md
e2e-test/: .env  .env.template  README.md  conftest.py  helper.py  pyproject.toml  stats_test_helper.py  sumomo.py  sumomo_debug_windows.py  sumomo_windows.py  test_sumomo_amd_amf.py  test_sumomo_apple_video_toolbox.py  test_sumomo_basic.py  test_sumomo_intel_vpl.py  test_sumomo_nvidia_video_codec.py  test_sumomo_openh264.py  test_sumomo_raspberry_pi.py  test_sumomo_windows.py
example/: NOTICE.md  README.md  base.py
example/doc/: USE_MESSAGING_RECVONLY_SAMPLE.md
examples/: .gitignore  DEPS  OLD_CHANGES.md  README.md  VERSION
examples/doc/: USE_MESSAGING_RECVONLY_SAMPLE.md  USE_SDL_SAMPLE.md  USE_SUMOMO.md
examples/messaging_recvonly_sample/: CMakeLists.txt  README.md  run.py
examples/multistrap/: ubuntu-20.04_armv8_jetson.conf  ubuntu-22.04_armv8.conf  ubuntu-24.04_armv8.conf
examples/sdl_sample/: CMakeLists.txt  README.md  run.py
examples/sdl_sample/macos_arm64/: CMakeLists.txt  run.py
examples/sdl_sample/src/: sdl_renderer.cpp  sdl_renderer.h  sdl_sample.cpp
examples/sdl_sample/ubuntu-20.04_armv8_jetson/: CMakeLists.txt  run.py
examples/sdl_sample/ubuntu-20.04_x86_64/: run.py
examples/sdl_sample/ubuntu-22.04_armv8/: CMakeLists.txt  run.py
examples/sdl_sample/ubuntu-22.04_armv8_jetson/: CMakeLists.txt  run.py
examples/sdl_sample/ubuntu-22.04_x86_64/: CMakeLists.txt  run.py
examples/sdl_sample/ubuntu-24.04_armv8/: CMakeLists.txt  run.py
examples/sdl_sample/ubuntu-24.04_x86_64/: CMakeLists.txt  run.py
examples/sdl_sample/windows_x86_64/: CMakeLists.txt  run.py
examples/sumomo/: CMakeLists.txt  README.md  REDME.md  run.py
examples/sumomo/raspberry-pi-os_armv8/: CMakeLists.txt  run.py
include/sora/: aligned_encoder_adapter.h  audio_decoder_lyra.h  audio_device_module.h  audio_encoder_lyra.h  audio_output_helper.h  audio_output_manager.h  boost_json_iwyu.h  camera_device_capturer.h  cuda_context.h  data_channel.h  device_list.h  device_video_capturer.h  i420_encoder_adapter.h  java_context.h  netint_context.h  open_h264_video_codec.h  open_h264_video_decoder.h  open_h264_video_encoder.h  rtc_ssl_verifier.h  rtc_stats.h  scalable_track_source.h  session_description.h  sora_audio_decoder_factory.h  sora_audio_encoder_factory.h  sora_client_context.h  sora_client_factory.h  sora_default_client.h  sora_peer_connection_factory.h  sora_signaling.h  sora_signaling_whip.h  sora_video_codec.h  sora_video_codec_factory.h  sora_video_decoder_factory.h  sora_video_encoder_factory.h  srtp_keying_material_exporter.h  ssl_verifier.h  url_parts.h  v4l2_video_capturer.h  version.h  websocket.h  (+1 more)
messaging_recvonly_sample/macos_arm64/: CMakeLists.txt  run.py
messaging_recvonly_sample/src/: messaging_recvonly_sample.cpp
messaging_recvonly_sample/ubuntu-20.04_armv8_jetson/: CMakeLists.txt  run.py
messaging_recvonly_sample/ubuntu-20.04_x86_64/: CMakeLists.txt  run.py
messaging_recvonly_sample/ubuntu-22.04_x86_64/: CMakeLists.txt  run.py
momo_sample/windows_x86_64/: CMakeLists.txt  run.py
multistrap/: raspberry-pi-os_armv8.conf  ubuntu-20.04_armv8_jetson.conf  ubuntu-20.04_armv8_jetson_xavier.conf  ubuntu-22.04_armv8.conf  ubuntu-22.04_armv8_jetson.conf  ubuntu-24.04_armv8.conf
sdl_sample/macos_arm64/: CMakeLists.txt  run.py
src/: actor.h  aligned_encoder_adapter.cpp  amf_context_impl.cpp  amf_context_impl.h  audio_decoder_lyra.cpp  audio_device_module.cpp  audio_encoder_lyra.cpp  audio_output_helper.cpp  audio_output_manager.cpp  blend2d_iwyu.h  camera_device_capturer.cpp  cuda_context_cuda.cpp  cuda_context_cuda.h  data_channel.cpp  data_channel.h  default_video_formats.cpp  default_video_formats.h  device_list.cpp  device_video_capturer.cpp  device_video_capturer.h  future.h  hevc_profile_tier_level.cpp  hevc_profile_tier_level.h  i420_encoder_adapter.cpp  java_context.cpp  netint_context_impl.cpp  open_h264_video_codec.cpp  open_h264_video_decoder.cpp  open_h264_video_encoder.cpp  rtc_ssl_verifier.cpp  rtc_ssl_verifier.h  rtc_stats.cpp  rtc_stats.h  scalable_track_source.cpp  scalable_track_source.h  session_description.cpp  session_description.h  sora.cpp  sora_audio_decoder_factory.cpp  sora_audio_encoder_factory.cpp  (+25 more)
test/: .testparam.example.json  CMakeLists.txt  connect_disconnect.cpp  datachannel.cpp  device_list.cpp  e2e.cpp  fake_video_capturer.cpp  fake_video_capturer.h  hello.cpp  hello.h  lyra.cpp  whip.cpp
test/android/: build.gradle
test/android/app/: build.gradle
test/android/app/src/main/: AndroidManifest.xml
test/android/app/src/main/cpp/: CMakeLists.txt  jni_onload.cc  native-lib.cpp
test/android/app/src/main/java/jp/shiguredo/hello/: MainActivity.java
test/android/gradle/wrapper/: gradle-wrapper.properties
test/hello/hello/: SceneDelegate.h  ViewController.h  ViewController.mm  main.m
test/hello/hello.xcodeproj/: project.pbxproj
test/ios/hello/: AppDelegate.h  AppDelegate.m  AudioOutputHelperWrapper.h  AudioOutputHelperWrapper.mm  Info.plist  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.mm  main.m
test/ios/hello.xcodeproj/: project.pbxproj
test/ios/hello.xcodeproj/xcshareddata/xcschemes/: hello.xcscheme
test/ios/hello/Base.lproj/: Main.storyboard
(+215 files in other folders)
